examples/passing/non-fqdn-backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inventory-api-route
  namespace: default
spec:
  parentRefs:
    - name: nonfqdn-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /partner-api
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: inventory-api-upstream
          port: 8080
